chore: initialize project documentation and add package-info files across all modules